basic canvas working and spitting out json path

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,8 @@
     },
     "globals": {
         "QUnit": false,
-        "supabase": false
+        "supabase": false,
+        "fabric": false
     },
     "rules": {
         "eqeqeq": ["error", "always"],
